<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentUserType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">
        <include layout="@layout/header"/>
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <ImageView style="@style/img_back"
                android:id="@+id/img_back"
                android:tint="@color/white"/>
            <TextView style="@style/tv_header_2"
                android:text="@string/setting"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <ScrollView
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">
                <TextView style="@style/tv_title"
                    android:text="@string/language"/>
                <RadioGroup
                    android:id="@+id/rd_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
             <RelativeLayout style="@style/et_parent_2"
                 android:padding="@dimen/_2sdp">
                 <ImageView style="@style/img_icon"
                     android:id="@+id/flag1"
                     android:src="@drawable/flag_usa"
                     android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"/>
               <RadioButton
                   android:id="@+id/rb_english"
                   android:layout_toStartOf="@+id/flag1"
                   android:layout_width="match_parent"
                   style="@style/tv_header_2"
                   android:text="English"/>
             </RelativeLayout>
                    <RelativeLayout style="@style/et_parent_2"
                        android:padding="@dimen/_2sdp">
                        <ImageView style="@style/img_icon"
                            android:id="@+id/flag2"
                            android:src="@drawable/flag_arab"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"/>
                        <RadioButton
                            android:id="@+id/rb_arabic"
                            android:layout_width="match_parent"
                            style="@style/tv_header_2"
                            android:text="@string/arabic"
                            android:layout_toStartOf="@+id/flag2" />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"/>
                    <Button style="@style/btn_primary"
                        android:id="@+id/btn_apply"
                        android:text="@string/apply"/>
                </RadioGroup>
                <TextView style="@style/et_parent_2"
                    android:id="@+id/tv_setting"
                    android:text="@string/setting"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_arrow_right"/>
                <TextView style="@style/et_parent_2"
                    android:text="@string/membership"
                    android:visibility="gone"
                    android:id="@+id/tv_membership"
                    android:drawableEnd="@drawable/ic_arrow_right"/>
                <TextView style="@style/et_parent_2"
                    android:id="@+id/tv_order"
                    android:text="@string/my_order"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_arrow_right"/>
                <TextView style="@style/et_parent_2"
                    android:text="@string/about_us"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_arrow_right"/>
                <TextView style="@style/et_parent_2"
                    android:text="@string/privacy_policy"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_arrow_right"/>
                <TextView style="@style/et_parent_2"
                    android:text="@string/contact_us"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_arrow_right"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />
                <Button
                    android:id="@+id/btn_create_account"
                    style="@style/btn_primary"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/logout"
                    android:textAllCaps="false" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>