<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentUserType">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">
        <include layout="@layout/header"/>
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <ImageView style="@style/img_back"
                android:id="@+id/img_back"
                android:tint="@color/white"/>
            <TextView style="@style/tv_header_2"
                android:text="@string/edit_profile"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <ScrollView
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/et_parent"
                        android:id="@+id/et_fullname"
                        android:hint="@string/full_name"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/et_parent"
                        android:id="@+id/et_email"
                        android:hint="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        style="@style/et_parent"
                        android:id="@+id/et_mobile"
                        android:hint="@string/mobile_number"
                        android:textColor="@color/colorPrimary"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                   android:hint="@string/date_of_barth"
                    android:padding="@dimen/_10sdp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />
                <Button
                    android:id="@+id/btn_update"
                    style="@style/btn_primary"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/update_now"
                    android:textAllCaps="false" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>