<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_centerVertical="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_15sdp"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/tv_header_medium"
                    android:layout_toEndOf="@+id/img_logo"
                    android:gravity="center"
                    android:text="@string/login_or_create_an_account" />

                <TextView
                    style="@style/tv_description"
                    android:text="@string/login_or_msg" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_2sdp"
                        android:backgroundTint="@color/colorPrimary"
                        android:background="@drawable/circle_gray" />

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_2sdp"
                        android:background="@drawable/circle_gray" />

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_2sdp"
                        android:background="@drawable/circle_gray" />

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_2sdp"
                        android:background="@drawable/circle_gray" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <Button
                    android:id="@+id/btn_register_later"
                    style="@style/btn_gray"
                    android:backgroundTint="@color/gray_6"
                    android:text="@string/register_later" />

                <Button
                    android:id="@+id/btn_register_now"
                    style="@style/btn_primary"
                    android:text="@string/register_now" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/btn_border_primary"
                    android:text="@string/login" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>